Fix bugs in prepends. Block file display in settings controller

--- a/custom/prependconfig-sample.json
+++ b/custom/prependconfig-sample.json
@@ -1,7 +1,1 @@
-{
-	'separator': '@', 
-	'mapping': {
-		'ou':'grp', 
-		'o' :'org'
-	}
-}
+{ "separator": "@", "mapping": { "ou":"grp", "o" :"org" } }
