--- a/custom/foobartokensconfig.json
+++ b/custom/foobartokensconfig.json
@@ -1,8 +1,8 @@
 {
 	"tokens_provider_id" 	: "provider",
-	"tokens_user_id" 		: "foo@bar",
-	"tokens_display_name" 	: "Foo BAR",
-	"tokens_email" 			: "foo@bar.org",
+	"tokens_user_id" 		: "foo2@bar",
+	"tokens_display_name" 	: "Foo2 BAR",
+	"tokens_email" 			: "foo2@bar.org",
 	"tokens_groups" 		: {
 		"ou" : ["FooOU"], "o" : ["barORG"]
 	}
