Add default value for prepend group naming.

--- a/custom/prependconfig-sample.json
+++ b/custom/prependconfig-sample.json
@@ -1,1 +1,1 @@
-{ "separator": "@", "mapping": { "ou":"grp", "o" :"org" } }
+{ "separator": "@", "mapping": { "ou":{"kind":"grp", "defaultValue":"defval1"}, "o" :{"kind":"org", "defaultValue":"defval2"} } }
